--- a/genius-rating-web/pom.xml
+++ b/genius-rating-web/pom.xml
@@ -75,6 +75,17 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
+			
+	    <!-- Jackson JSON Mapper -->
+	    <dependency>
+	        <groupId>org.codehaus.jackson</groupId>
+	        <artifactId>jackson-mapper-asl</artifactId>
+	    </dependency>
+
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
 		
 		<!-- Web View -->
 		<dependency>
