--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,19 @@
 			    <artifactId>spring-web</artifactId>
                 <version>${spring.version}</version>
 			</dependency>
+			
+		    <!-- Jackson JSON Mapper -->
+			<dependency>
+			    <groupId>org.codehaus.jackson</groupId>
+			    <artifactId>jackson-mapper-asl</artifactId>
+			    <version>1.9.13</version>
+			</dependency>
+
+			<dependency>
+			    <groupId>com.fasterxml.jackson.core</groupId>
+			    <artifactId>jackson-databind</artifactId>
+			    <version>2.11.0</version>
+			</dependency>		    
 
 			<!-- Web View -->
 			<dependency>
