--- a/genius-rating-web/pom.xml
+++ b/genius-rating-web/pom.xml
@@ -75,7 +75,18 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
-			
+		
+		<!-- Validation -->
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		</dependency>
+
 	    <!-- Jackson JSON Mapper -->
 	    <dependency>
 	        <groupId>org.codehaus.jackson</groupId>
