--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,19 @@
                 <version>${spring.version}</version>
 			</dependency>
 			
+			<!-- Validation -->
+			<dependency>
+			    <groupId>javax.validation</groupId>
+			    <artifactId>validation-api</artifactId>
+			    <version>2.0.1.Final</version>
+			</dependency>
+			
+			<dependency>
+			    <groupId>org.hibernate</groupId>
+			    <artifactId>hibernate-validator</artifactId>
+			    <version>5.4.3.Final</version>
+			</dependency>
+			
 		    <!-- Jackson JSON Mapper -->
 			<dependency>
 			    <groupId>org.codehaus.jackson</groupId>
