--- a/genius-rating-impl/pom.xml
+++ b/genius-rating-impl/pom.xml
@@ -18,6 +18,40 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>com.capitanperegrina.genius-rating</groupId>
+			<artifactId>genius-rating-api</artifactId>
+		</dependency>
+			
+		<dependency>
+			<groupId>com.capitanperegrina</groupId>
+			<artifactId>utils</artifactId>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context</artifactId>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		</dependency>
+			
+		<dependency>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		</dependency>
+
+	    <dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>slf4j-api</artifactId>
+	    </dependency>
+
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		</dependency>
 
 	</dependencies>
 
