--- a/genius-rating-web/src/main/resources/genius-rating-messages.properties
+++ b/genius-rating-web/src/main/resources/genius-rating-messages.properties
@@ -1,2 +1,13 @@
 
 common.title = Genius Rating - A free, do it yourself sailing rating system
+
+custom.simpleUser.mail.bye                               = Yours sincerely, the GeNius Rating team
+custom.simpleUser.mail.hi                                = Hi {0},
+custom.simpleUser.mail.subject.userPassChanged           = Your password has been successfully changed.
+custom.simpleUser.mail.subject.userPassResetExecuted     = Your password has been successfully reset.
+custom.simpleUser.mail.subject.userPassResetRequested    = Password reset request.
+custom.simpleUser.mail.subject.userRegistered            = Your user has been successfully registered.
+custom.simpleUser.mail.userPassChanged.paragraph1        = Your password has been successfully changed. If it was not you who did it, please contact us at contact@genius-rating.com
+custom.simpleUser.mail.userPassResetExecuted.paragraph1  = Your password has been successfully reset. If it was not you who did it, please contact us at contact@genius-rating.com
+custom.simpleUser.mail.userPassResetRequested.paragraph1 = At your request, you can reset your password at the following url: {0}. If you haven't requested it, just ignore this message.
+custom.simpleUser.mail.userRegistered.paragraph1         = Welcome to the GeNius Rating. You can access our website with your nickname "{0}" or email "{1}" and request and calculate the GeNius rating certificates you need to participate in rail races which use it. Thank you very much for joining us.
