Menus & boat tables

--- a/genius-rating-web/src/main/resources/genius-rating-messages.properties
+++ b/genius-rating-web/src/main/resources/genius-rating-messages.properties
@@ -1,4 +1,17 @@
 
+boat.list.button.del.alt   = Delete boat
+boat.list.button.edit.alt  = Edit boat
+boat.list.button.pdf.alt   = Get a Genius-Rating certificate copy
+boat.list.button.see.alt   = Consult boat
+boat.list.empty            = No boats found
+boat.list.header.boatName  = Name
+boat.list.header.buildYear = Year
+boat.list.header.loa       = LOA
+boat.list.header.model     = Model
+boat.list.header.rating    = Rating
+boat.list.header.sNumber   = S#
+boat.list.header.shipyard  = Shipyard
+
 common.title = Genius Rating - A free, do it yourself sailing rating system
 
 custom.simpleUser.mail.bye                               = Yours sincerely, the GeNius Rating team
