post merge corrections

--- a/genius-rating-web/pom.xml
+++ b/genius-rating-web/pom.xml
@@ -19,7 +19,17 @@
 
 	<dependencies>
 
-		<!-- Own -->			
+		<!-- Own -->
+		<dependency>
+			<groupId>com.capitanperegrina.genius-rating</groupId>
+			<artifactId>genius-rating-api</artifactId>
+		</dependency>
+       
+		<dependency>
+			<groupId>com.capitanperegrina.genius-rating</groupId>
+			<artifactId>genius-rating-impl</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.capitanperegrina.simple-user</groupId>
 			<artifactId>simple-user-api</artifactId>
@@ -75,17 +85,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
-		
-		<!-- Validation -->
-		<dependency>
-		    <groupId>javax.validation</groupId>
-		    <artifactId>validation-api</artifactId>
-		</dependency>
-
-		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-validator</artifactId>
-		</dependency>
 
 	    <!-- Jackson JSON Mapper -->
 	    <dependency>
@@ -107,11 +106,6 @@
 		<dependency>
 		    <groupId>org.apache.tiles</groupId>
 		    <artifactId>tiles-jsp</artifactId>
-		</dependency>
-            
-		<dependency>
-		    <groupId>org.springframework.security</groupId>
-		    <artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 		
         <dependency>
